# skas-algo-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 19da5f1d4255_add_algo_notes_and_algo_run_archived.py  1b856aa61865_add_algo_run_trade_log.py  26c0bf987de5_drop_broker_password_and_totp_columns.py  33150832cf97_add_broker_account_armed.py  37401bde569a_add_algo_run_state_for_live_recovery.py  43291c1c119b_add_algo_run_batch_id.py  8f2a1c9d4e55_add_strategy_template.py  b5fe280f771a_initial_schema.py
deploy/: skas-algo.service
docs/: ARCHITECTURE.md  DEPLOY.md  FEATURES.md  MOBILE.md  PLAN-app-screens-redesign.md  PLAN-hni-weekly.md  PLAN-ios-app.md  PLAN-live-options-deployment.md  PLAN-staggered-covered-call.md  PLAN.md  trading-brain.md
scripts/: com.skas.algo.plist.template  deploy-vps.sh  deploy-web.sh  install-supervisor.sh  preflight.sh  skasctl.sh  start.sh  status.sh  stop.sh  uninstall-supervisor.sh  vps-update.sh
src/skas_algo/: __init__.py  main.py
src/skas_algo/api/: __init__.py  app.py  deps.py  models.py
src/skas_algo/brokers/: __init__.py  base.py  dhan.py  live_broker.py  sim_broker.py  zerodha.py
src/skas_algo/config/: logging_config.py  settings.py
src/skas_algo/data/: __init__.py  gfd_import.py  (+7 more)
tests/: conftest.py  test_alerts.py  test_api_backtest.py  test_api_brokers.py  test_api_data.py  test_api_donchian.py  test_api_research.py  test_api_trade.py  test_auth.py  test_backtest_v2_registry.py  test_basket_options_run.py  test_black_scholes.py  test_broker_session.py  test_broker_smoke_test.py  test_call_ratio_monthly.py  test_cp_ratio_expiry.py  test_custom_trade.py  test_cycle_detail.py  test_delta_neutral_monthly.py  test_deployed_metrics.py  test_dhan_adapter.py  test_donchian_bt.py  test_donchian_strangle.py  test_donchian_study.py  test_double_diagonal_calendar.py  test_ema21_momentum.py  test_engine.py  test_entry_vol_filter.py  test_exit_cadence.py  test_fibret.py  test_gfd_import.py  test_hardening.py  test_health.py  test_hni_weekly.py  test_intraday_replay.py  test_intraday_straddle.py  test_intraday_straddle_bt.py  test_iron_fly_monthly.py  test_live.py  test_live_broker.py  (+35 more)
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-mobile/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-mobile/src/: App.tsx  feed.ts  main.tsx  storage.ts  tokens.css
web/src/: App.tsx  index.css  main.tsx  types.ts
(+189 files in other folders)
