[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skas-algo-platform"
version = "0.1.0"
description = "Single-user algorithmic trading platform: backtest, forward-test, and live from one engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SKAS" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "cryptography>=42.0.0",  # Fernet encryption for broker credentials at rest
    "pyotp>=2.9.0",          # TOTP 2FA code generation for broker login
    "requests>=2.31.0",      # Zerodha login flow + Telegram
    "kiteconnect>=4.2.0",    # Zerodha order/quote API
    "pyjwt>=2.8.0",          # signed JWT bearer tokens for app auth
    "bcrypt>=4.1.0",         # operator-password hashing for app auth
    # Market data + broker abstraction (sibling project)
    # "skas-data",  # installed via: pip install -e ../skas-data
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black",
    "isort",
    "ruff",
    "mypy",
]

[project.scripts]
skas-algo = "skas_algo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# UP042: str+Enum is a deliberate, SQLAlchemy-friendly pattern; don't force StrEnum.
# B008: FastAPI's Depends() in argument defaults is the framework's intended idiom.
ignore = ["UP042", "B008"]

[tool.ruff.lint.per-file-ignores]
# conftest sets env vars before importing app modules (must precede imports).
"tests/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
